--- a/.gitconfig
+++ b/.gitconfig
@@ -5,5 +5,5 @@ Host github.com
   IdentityFile id_ed25519_hardikverma22
 
 [user]
-    name = Hardik Verma
-    email = hardikverma22@rediffmail.com
+    name = Bablu Gupta
+    email = bablu8795379783@gmail.com
